update text shadow on main section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
       h1#homeHeading {
         filter: progid:DXImageTransform.Microsoft.Shadow(color=#0000FF,direction=45);
-        text-shadow: 4px 4px black;
+        text-shadow: 0.2rem 0.2rem 0.2rem black;
+        margin-bottom: 50px;
       }
     </style>
 
