--- a/index.html
+++ b/index.html
@@ -31,6 +31,33 @@
         }
       }
 
+      nav#mainNav .navbar-brand img {
+        margin:-25px -8px 0;
+        height:46px;
+        transition: visibility 200ms;
+      }
+
+      nav#mainNav a img#white {display: none; visibility: hidden;}
+      nav#mainNav a:hover img#grey  {display: none; visibility: hidden;}
+      nav#mainNav a:hover img#white {display: inline-block; visibility: visible;}
+      nav#mainNav a img#orange {display: none; visibility: hidden;}
+
+      nav#mainNav.navbar-shrink a img#grey,
+      nav#mainNav.navbar-shrink a img#white {
+        display: none; visibility: hidden;
+      }
+      nav#mainNav.navbar-shrink a img#orange {
+        display: inline-block;
+        visibility: visible;
+      }
+
+      nav#mainNav a div {
+        margin-top: 10px;
+        display: inline-block;
+        font-size: 30px;
+      }
+
+
       h1#homeHeading {
         filter: progid:DXImageTransform.Microsoft.Shadow(color=#0000FF,direction=45);
         text-shadow: 0.2rem 0.2rem 0.2rem black;
@@ -45,7 +72,13 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Be Wise Bookkeeping</a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top">
+          <div>Be Wise B</div>
+          <img id="grey" src="img/be-wise-logo-grey.png"/>
+          <img id="white" src="img/be-wise-logo-white.png"/>
+          <img id="orange" src="img/be-wise-logo.png"/>
+          <div>kkeeping Services</div>
+        </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -83,9 +116,19 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">About Me</h2>
+
+            <p class="text-faded">
+              I have over 30 year of experience in the accounting and bookkeeping field and a knack for numbers and finding the best solutions for a company's books.
+              I am proficient with Excel, Quickbooks, and Xero, which is one of the latest software products on the market.
+              I stay up-to-date with the latest trends and am excellent with technology.
+            </p>
             <hr class="light">
-            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <h2 class="section-heading text-white">I'll Fix the Mess</h2>
+
+            <p class="text-faded">
+              Have you gotten behind with your bookkeeping or had a bad experience with your old bookkeeper and need someone to cleanup the mess?  That's one of my specialties.
+            </p>
             <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Get Started!</a>
           </div>
         </div>
@@ -103,32 +146,25 @@
       </div>
       <div class="container">
         <div class="row">
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-diamond text-primary sr-icons"></i>
-              <h3>Sturdy Templates</h3>
-              <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+              <i class="fa fa-4x fa-calculator text-primary sr-icons"></i>
+              <h3>Bookkeeping</h3>
+              <p class="text-muted">Bookkeeping</p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-lg-4 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-paper-plane text-primary sr-icons"></i>
-              <h3>Ready to Ship</h3>
-              <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+              <h3>Tax Preparation</h3>
+              <p class="text-muted">Taxes done right and on time!</p>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 text-center">
+          <div class="col-lg-4 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-newspaper-o text-primary sr-icons"></i>
-              <h3>Up to Date</h3>
-              <p class="text-muted">We update dependencies to keep things fresh.</p>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6 text-center">
-            <div class="service-box">
-              <i class="fa fa-4x fa-heart text-primary sr-icons"></i>
-              <h3>Made with Love</h3>
-              <p class="text-muted">You have to make your websites with love these days!</p>
+              <i class="fa fa-4x fa-university text-primary sr-icons"></i>
+              <h3>Payroll Services</h3>
+              <p class="text-muted">Ensure your employees are paid correctly.</p>
             </div>
           </div>
         </div>
@@ -251,12 +287,18 @@
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fa fa-phone fa-3x sr-contact"></i>
-            <p>123-456-6789</p>
+            <p>518-424-1825</p>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fa fa-at fa-3x sr-contact"></i>
+            <p>
+              <a href="mailto:your-email@your-domain.com">email@email.com</a>
+            </p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
             <i class="fa fa-envelope-o fa-3x sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a>
+              72 Jolly Rd, West Charlton, NY 12010
             </p>
           </div>
         </div>
