--- a/index.html
+++ b/index.html
@@ -120,9 +120,21 @@
 
             <p class="text-faded">
               I have over 30 year of experience in the accounting and bookkeeping field and a knack for numbers and finding the best solutions for a company's books.
-              I am proficient with Excel, Quickbooks, and Xero, which is one of the latest software products on the market.
+              I am proficient with Xero, Quickbooks, and Excel.
               I stay up-to-date with the latest trends and am excellent with technology.
             </p>
+
+            <hr class="light">
+            <h2 class="section-heading text-white">I am a Xero Partner</h2>
+             <div>
+                <a href="https://www.xero.com/us/">
+                  <img src="img/xero-logo.png" alt="xero logo"/>
+                </a>
+              </div>
+             <p class="text-faded">
+              Cloud based small business accounting software with all the time-saving tools you need to grow your business.
+             </p>
+
             <hr class="light">
             <h2 class="section-heading text-white">I'll Fix the Mess</h2>
 
@@ -196,7 +208,7 @@
           <div class="col-lg-3 mr-auto text-center">
             <i class="fa fa-at fa-3x sr-contact"></i>
             <p>
-              <a href="mailto:your-email@your-domain.com">email@email.com</a>
+              <a href="mailto:janet@bewisebookkeeping.com">janet@bewisebookkeeping.com</a>
             </p>
           </div>
           <div class="col-lg-3 mr-auto text-center">
