updated about me

--- a/index.html
+++ b/index.html
@@ -140,9 +140,8 @@
             <h2 class="section-heading text-white">About Me</h2>
 
             <p class="text-faded">
-              I have over 30 year of experience in the accounting and bookkeeping field and a knack for numbers and finding the best solutions for a company's books.
-              I am proficient with Xero, Quickbooks, and Excel.
-              I stay up-to-date with the latest trends and am excellent with technology.
+              Janet has over 30 year of experience in the accounting and bookkeeping field and a knack for numbers and finding the best solutions for a company's books.
+              She is proficient with Xero, Quickbooks, and Excel and stays up-to-date with the latest trends and am excellent with technology.
             </p>
 
             <hr class="light">
