updated about me header

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">About Me</h2>
+            <h2 class="section-heading text-white">About</h2>
 
             <p class="text-faded">
               Janet has over 30 year of experience in the accounting and bookkeeping field and a knack for numbers and finding the best solutions for a company's books.
