--- a/index.html
+++ b/index.html
@@ -65,13 +65,18 @@
         nav#mainNav a div{ font-size: 20px; }
         nav#mainNav a > div{ display: block; }
         nav#mainNav a div{ margin-top:-10px;}
+        nav#mainNav a img#orange  {
+          margin: -10px -8px 0;
+          height: 25px;
+        }
+      }
+
+      @media (max-width: 991px) {
         nav#mainNav a img#white {display: none; visibility: hidden;}
         nav#mainNav a img#grey  {display: none; visibility: hidden;}
         nav#mainNav a img#orange  {
           display: inline;
           visibility: visible;
-          margin: -10px -8px 0;
-          height: 25px;
         }
       }
 
