add services, quickbooks, and update content

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
+    <link rel="icon" type="image/ico" href="img/favicon.ico">
   </head>
 
   <body id="page-top">
@@ -80,20 +81,119 @@
             <h2 class="section-heading text-white">About</h2>
 
             <p class="text-faded">
-              Janet has over 30 year of experience in the accounting and bookkeeping field and a knack for numbers and finding the best solutions for a company's books.
-              She is proficient with Xero, Quickbooks, and Excel and stays up-to-date with the latest trends and am excellent with technology.
+              Be Wise Bookkeeping is a full-charge bookkeeping service. From initial set-up, bank reconciliations,
+              accounts payable and receivables, cash management, payroll, general ledger to financial reports,
+              we go beyond the bottom line to help you reach your goals while sticking to your values.
+              My services allow you to focus on what you do best — cultivate your business.
             </p>
 
             <hr class="light">
-            <h2 class="section-heading text-white">I am a Xero Partner</h2>
-             <div>
-                <a href="https://www.xero.com/us/">
-                  <img src="img/xero-logo.png" alt="xero logo"/>
-                </a>
+            <h2 class="section-heading text-white">Industry Experience</h2>
+
+            <p class="text-faded">
+              Janet has over 30 years of experience serving clients in many industries
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-home text-faded sr-icons"></i>
+                      <p class="text-faded">Real estate and hiring services</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x  fa-graduation-cap text-faded sr-icons"></i>
+                      <p class="text-faded">Education</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-industry text-faded sr-icons"></i>
+                      <p class="text-faded">Manufacturing</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-university text-faded sr-icons"></i>
+                      <p class="text-faded">Retail</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-bullhorn text-faded sr-icons"></i>
+                      <p class="text-faded">Media and Communications</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-line-chart text-faded sr-icons"></i>
+                      <p class="text-faded">Marketing and Advertising</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-usd text-faded sr-icons"></i>
+                      <p class="text-faded">Finance and Insurance</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-handshake-o text-faded sr-icons"></i>
+                      <p class="text-faded">Personal & Professional services</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-wrench text-faded sr-icons"></i>
+                      <p class="text-faded">Construction and Trades</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-heartbeat text-faded sr-icons"></i>
+                      <p class="text-faded">Healthcare and Social Services</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-paint-brush text-faded sr-icons"></i>
+                      <p class="text-faded">Arts and Recreation</p>
+                    </div>
+                  </div>
+                  <div class="col-lg-3 col-sm-4 col-6 text-center">
+                    <div class="service-box">
+                      <i class="fa fa-2x fa-bed text-faded sr-icons"></i>
+                      <p class="text-faded">Hospitality</p>
+                    </div>
+                  </div>
+                </div>
+            </p>
+
+            <hr class="light">
+            <div class="row partner">
+              <div class="col-lg-6 mx-auto text-center">
+                <h2 class="section-heading text-white">Xero<br/>Partner</h2>
+                <div>
+                  <a href="https://www.xero.com/us/">
+                    <img src="img/xero-logo.png" alt="xero logo" class="xero" target="_blank"/>
+                  </a>
+                </div>
+                <p class="text-faded">
+                  Cloud based small business accounting software with all the time-saving tools you need to grow your business.
+                </p>
               </div>
-             <p class="text-faded">
-              Cloud based small business accounting software with all the time-saving tools you need to grow your business.
-             </p>
+              <div class="col-lg-6 mx-auto text-center">
+                <h2 class="section-heading text-white">Quickbooks ProAdvisor</h2>
+                <div>
+                  <a href="https://quickbooks.intuit.com/" target="_blank">
+                    <img src="img/qb.png" alt="Quickbooks logo"/>
+                  </a>
+                </div>
+                <p class="text-faded">
+                  The #1 rated small business accounting software.
+                </p>
+              </div>
+            </div>
 
             <hr class="light">
             <h2 class="section-heading text-white">I'll Fix the Mess</h2>
