--- a/index.html
+++ b/index.html
@@ -77,15 +77,47 @@
     <section class="bg-primary" id="about">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">About</h2>
+          <div class="col-lg-10 mx-auto text-center">
+            <h1 class="section-heading text-white">About</h1>
 
             <p class="text-faded">
               Be Wise Bookkeeping is a full-charge bookkeeping service. From initial set-up, bank reconciliations,
               accounts payable and receivables, cash management, payroll, general ledger to financial reports,
-              we go beyond the bottom line to help you reach your goals while sticking to your values.
+              Ixs go beyond the bottom line to help you reach your goals while sticking to your values.
               My services allow you to focus on what you do best — cultivate your business.
             </p>
+
+            <hr class="light"/>
+            <h2 class="section-heading text-white">Partnerships</h2>
+            <div class="col-lg-12 mx-auto text-center">
+              <div class="row partner">
+                <div class="col-lg-6 mx-auto text-center">
+
+                  <div>
+                    <a href="https://www.xero.com/us/">
+                      <img src="img/xero-logo.png" alt="xero logo" class="xero" target="_blank"/>
+                    </a>
+                  </div>
+                  <h3 class="section-heading text-white">Xero Partner</h2>
+                  <p class="text-faded">
+                    Cloud based small business accounting software with all the time-saving tools you need to grow your business.
+                  </p>
+                </div>
+                <div class="col-lg-6 mx-auto text-center">
+                  <div>
+                    <a href="https://quickbooks.intuit.com/" target="_blank">
+                      <img src="img/qb.png" alt="Quickbooks logo"/>
+                    </a>
+                  </div>
+                  <h3 class="section-heading text-white">Quickbooks ProAdvisor</h2>
+                  <p class="text-faded">
+                    The #1 rated small business accounting software.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+
 
             <hr class="light">
             <h2 class="section-heading text-white">Industry Experience</h2>
@@ -167,33 +199,8 @@
                     </div>
                   </div>
                 </div>
+              </div>
             </p>
-
-            <hr class="light">
-            <div class="row partner">
-              <div class="col-lg-6 mx-auto text-center">
-                <h2 class="section-heading text-white">Xero<br/>Partner</h2>
-                <div>
-                  <a href="https://www.xero.com/us/">
-                    <img src="img/xero-logo.png" alt="xero logo" class="xero" target="_blank"/>
-                  </a>
-                </div>
-                <p class="text-faded">
-                  Cloud based small business accounting software with all the time-saving tools you need to grow your business.
-                </p>
-              </div>
-              <div class="col-lg-6 mx-auto text-center">
-                <h2 class="section-heading text-white">Quickbooks ProAdvisor</h2>
-                <div>
-                  <a href="https://quickbooks.intuit.com/" target="_blank">
-                    <img src="img/qb.png" alt="Quickbooks logo"/>
-                  </a>
-                </div>
-                <p class="text-faded">
-                  The #1 rated small business accounting software.
-                </p>
-              </div>
-            </div>
 
             <hr class="light">
             <h2 class="section-heading text-white">I'll Fix the Mess</h2>
@@ -201,13 +208,14 @@
             <p class="text-faded">
               Have you gotten behind with your bookkeeping or had a bad experience with your old bookkeeper and need someone to cleanup the mess?  That's one of my specialties.
             </p>
-            <a class="btn btn-default btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <a class="btn btn-default btn-xl js-scroll-trigger text-primary" href="#services">How Can I Help?</a>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="services">
+
+    <section id="services" >
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
@@ -216,53 +224,83 @@
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="container col-lg-6">
         <div class="row">
-          <div class="col-lg-6 col-md-6 text-center">
-            <div class="service-box">
-              <i class="fa fa-4x fa-calculator text-primary sr-icons"></i>
-              <h3>Bookkeeping</h3>
-              <p class="text-muted">Keep your books accurate and up to date!</p>
+          <div class="col-lg-4 col-md-4 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-sign-out sr-icons"></i>
+              <h3>Accounts Payable</h3>
             </div>
           </div>
-          <div class="col-lg-6 col-md-6 text-center">
-            <div class="service-box">
-              <i class="fa fa-4x fa-university text-primary sr-icons"></i>
-              <h3>Payroll Services</h3>
-              <p class="text-muted">Ensure your employees are paid correctly.</p>
+          <div class="col-lg-4 col-md-4 col-6 text-center text-faded">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-list sr-icons"></i>
+              <h3>General Ledger</h3>
             </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-usd sr-icons"></i>
+              <h3>Cash Management</h3>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-sign-in sr-icons"></i>
+              <h3>Accounts Receivable</h3>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-pie-chart sr-icons"></i>
+              <h3>Financial Reporting</h3>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-file-text sr-icons"></i>
+              <h3>Invoicing</h3>
+            </div>
+          </div>
+          <div class="col-lg-6 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-question-circle sr-icons"></i>
+              <h3>Troubleshooting</h3>
+            </div>
+          </div>
+          <div class="col-lg-6 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-table sr-icons"></i>
+              <h3>Spreadsheets</h3>
+            </div>
+          </div>
+          <div class="col-12 text-center">
+            <a class="btn btn-primary btn-xl js-scroll-trigger text-white" id="get-in-touch" href="#contact">Get in Touch!</a>
           </div>
         </div>
       </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="bg-primary">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">Let's Get In Touch!</h2>
-            <hr class="primary">
-            <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <h2 class="section-heading text-white">Let's Get In Touch!</h2>
+            <hr class="light">
+            <p class="text-white">Ready to work with me? That's great! Give me a call or send me an email and I will get back to you as soon as possible!</p>
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 ml-auto text-center">
+          <div class="col-12 col-sm-6 ml-auto text-center text-white">
             <i class="fa fa-phone fa-3x sr-contact"></i>
             <p>518-424-1825</p>
           </div>
-          <div class="col-lg-4 mr-auto text-center">
+          <div class="col-12 col-sm-6 mr-auto text-center text-white">
             <i class="fa fa-at fa-3x sr-contact"></i>
             <p>
-              <a href="mailto:janet@bewisebookkeeping.com">janet@bewisebookkeeping.com</a>
+              <a href="mailto:janet@bewisebookkeeping.com" class="text-white">janet@bewisebookkeeping.com</a>
             </p>
           </div>
-          <div class="col-lg-4 mr-auto text-center">
-            <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-            <p>
-              72 Jolly Rd, West Charlton, NY 12010
-            </p>
-          </div>
-
         </div>
       </div>
     </section>
