add payroll service

--- a/index.html
+++ b/index.html
@@ -262,13 +262,19 @@
               <h3>Invoicing</h3>
             </div>
           </div>
-          <div class="col-lg-6 col-6 text-center">
+          <div class="col-lg-4 col-md-4 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-users sr-icons"></i>
+              <h3>Payroll</h3>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-6 text-center">
             <div class="service-box text-primary">
               <i class="fa fa-4x fa-question-circle sr-icons"></i>
               <h3>Troubleshooting</h3>
             </div>
           </div>
-          <div class="col-lg-6 col-6 text-center">
+          <div class="col-lg-4 col-md-4 col-12 text-center">
             <div class="service-box text-primary">
               <i class="fa fa-4x fa-table sr-icons"></i>
               <h3>Spreadsheets</h3>
