--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div>B</div>
             <img id="grey" src="img/be-wise-logo-grey.png">
             <img id="white" src="img/be-wise-logo-white.png">
-            <img id="orange" src="img/be-wise-logo.png">
+            <img id="blue" src="img/be-wise-logo.png">
             <div>kkeeping</div>
           </div>
         </a>
@@ -224,60 +224,60 @@
           </div>
         </div>
       </div>
-      <div class="container col-lg-6">
+      <div class="container col-lg-8">
         <div class="row">
           <div class="col-lg-4 col-md-4 col-6 text-center">
             <div class="service-box text-primary">
               <i class="fa fa-4x fa-sign-out sr-icons"></i>
-              <h3>Accounts Payable</h3>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-6 text-center text-faded">
-            <div class="service-box text-primary">
-              <i class="fa fa-4x fa-list sr-icons"></i>
-              <h3>General Ledger</h3>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-6 text-center">
-            <div class="service-box text-primary">
-              <i class="fa fa-4x fa-usd sr-icons"></i>
-              <h3>Cash Management</h3>
+              <h4>Accounts Payable</h4>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-6 text-center">
             <div class="service-box text-primary">
               <i class="fa fa-4x fa-sign-in sr-icons"></i>
-              <h3>Accounts Receivable</h3>
+              <h4>Accounts Receivable</h4>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-6 text-center text-faded">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-list sr-icons"></i>
+              <h4>General Ledger</h4>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-usd sr-icons"></i>
+              <h4>Cash Management</h4>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-6 text-center">
             <div class="service-box text-primary">
               <i class="fa fa-4x fa-pie-chart sr-icons"></i>
-              <h3>Financial Reporting</h3>
+              <h4>Financial Reporting</h4>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-6 text-center">
             <div class="service-box text-primary">
               <i class="fa fa-4x fa-file-text sr-icons"></i>
-              <h3>Invoicing</h3>
+              <h4>Invoicing</h4>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-6 text-center">
+            <div class="service-box text-primary">
+              <i class="fa fa-4x fa-table sr-icons"></i>
+              <h4>Spreadsheets</h4>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-6 text-center">
             <div class="service-box text-primary">
               <i class="fa fa-4x fa-users sr-icons"></i>
-              <h3>Payroll</h3>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-6 text-center">
-            <div class="service-box text-primary">
-              <i class="fa fa-4x fa-question-circle sr-icons"></i>
-              <h3>Troubleshooting</h3>
+              <h4>Payroll</h4>
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-12 text-center">
             <div class="service-box text-primary">
-              <i class="fa fa-4x fa-table sr-icons"></i>
-              <h3>Spreadsheets</h3>
+              <i class="fa fa-4x fa-question-circle sr-icons"></i>
+              <h4>Troubleshooting</h4>
             </div>
           </div>
           <div class="col-12 text-center">
@@ -297,14 +297,20 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 col-sm-6 ml-auto text-center text-white">
+          <div class="col-12 col-sm-4 ml-auto text-center text-white">
             <i class="fa fa-phone fa-3x sr-contact"></i>
             <p>518-424-1825</p>
           </div>
-          <div class="col-12 col-sm-6 mr-auto text-center text-white">
+          <div class="col-12 col-sm-4 mr-auto text-center text-white">
             <i class="fa fa-at fa-3x sr-contact"></i>
             <p>
               <a href="mailto:janet@bewisebookkeeping.com" class="text-white">janet@bewisebookkeeping.com</a>
+            </p>
+          </div>
+          <div class="col-12 col-md-4 mr-auto text-center text-white">
+            <i class="fa fa-facebook-official fa-3x sr-contact"></i>
+            <p>
+              <a href="https://facebook.com" target="_blank" class="text-white">Facebook</a>
             </p>
           </div>
         </div>
