--- a/index.html
+++ b/index.html
@@ -317,8 +317,8 @@
       </div>
     </section>
 
-    <div id="promo" style="position: fixed;top: 75px;z-index: 10000;color: white;width: 100%;background: #1a75ff;text-align: center;">
-      Get Xero for $1 a month for 1 year when you start up with me in the month of September!
+    <div id="promo" style="position: fixed;top: 90px;z-index: 1029;color: white;width: 100%;background: #1a75ff;text-align: center;">
+      Be Wise and Get your first year of Xero for only $12 when you start working with me!
     </div>
 
     <!-- Bootstrap core JavaScript -->
