fix promo messsage

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
     </section>
 
     <div id="promo" style="position: fixed;top: 90px;z-index: 1029;color: white;width: 100%;background: #1a75ff;text-align: center;">
-      Be Wise and Get your first year of Xero for only $12 when you start working with me!
+      Be Wise and get your first year of Xero for only $12 when you start working with me!
     </div>
 
     <!-- Bootstrap core JavaScript -->
