--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <p class="text-faded">
               Be Wise Bookkeeping is a full-charge bookkeeping service. From initial set-up, bank reconciliations,
               accounts payable and receivables, cash management, payroll, general ledger to financial reports,
-              Ixs go beyond the bottom line to help you reach your goals while sticking to your values.
+              I go beyond the bottom line to help you reach your goals while sticking to your values.
               My services allow you to focus on what you do best — cultivate your business.
             </p>
 
