--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
 
   <head>
+    <script>
+      if (window.location.host.indexOf('bewisebookkeeping.com') > -1 &&
+           window.location.protocol.indexOf('https:') == -1 )
+      {
+        window.location.protocol = 'https';
+      }
+    </script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
