add tel link for phone number

--- a/index.html
+++ b/index.html
@@ -306,7 +306,9 @@
         <div class="row">
           <div class="col-12 col-sm-4 ml-auto text-center text-white">
             <i class="fa fa-phone fa-3x sr-contact"></i>
-            <p>518-424-1825</p>
+            <p>
+              <a href="tel:+15184241825" id="telephone">518-424-1825</a>
+            </p>
           </div>
           <div class="col-12 col-sm-4 mr-auto text-center text-white">
             <i class="fa fa-at fa-3x sr-contact"></i>
